avoid copy/paste popup on ios

--- a/app/styles/crossword.css
+++ b/app/styles/crossword.css
@@ -1,3 +1,9 @@
+* {
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+}
+
 .crossword-container {
   max-width: 1400px;
   margin: 0 auto;
@@ -317,6 +323,22 @@
   aspect-ratio: 1;
   min-width: 0;
   min-height: 0;
+  width: 100%;
+  height: 100%;
+
+  /* Prevent text selection for cell-input */
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+}
+
+.crossword-cell::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
